--- a/README.org
+++ b/README.org
@@ -517,30 +517,13 @@ RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
 RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
 RewriteRule ^ - [L]
 
-# N.B. If this next rule is allowed to apply to a WebDAV directory, it
-# will break PUT requests to upload new files!
 RewriteRule ^ /index.html [L]
 #+END_EXAMPLE
 
-If your WebDAV directory happens to be not only on the same webserver,
-but also within a subdirectory of the directory containing this
-=.htaccess= file, then you will need to create another =.htaccess=
-file in the top-level WebDAV directory containing this:
-
-#+BEGIN_EXAMPLE
-RewriteEngine Off
-#+END_EXAMPLE
-
-Otherwise any attempts to use WebDAV to upload new files via =HTTP
-PUT= requests will fall foul of the =/index.html= rewrite rule above,
-resulting in a =403 Forbidden= response.
-
-Another way to avoid this more selectively is to precede that rule
-with:
-
-#+BEGIN_EXAMPLE
-RewriteCond %{REQUEST_METHOD} !PUT
-#+END_EXAMPLE
+N.B.: If you're using WebDAV as a sync back-end, and the =RewriteRule= is
+allowed to apply to a WebDAV directory, it will break PUT requests to
+upload new files! [[#webdav_apache_rewrite_engine][Here's documentation]] on how to configure both
+features together correctly.
 
 * Capture templates
   :PROPERTIES:
