--- a/README.org
+++ b/README.org
@@ -147,14 +147,14 @@ productivity of the user. It sounds trivial, but lots of alternative
 products do not live up to this expectation.
 
 Writing a parser for a complex syntax like Org mode in custom code is
-hard. Therefore, we are in the process of implementing a proper BNF
+hard. Therefore, we are in the process of implementing a proper EBNF
 based parser and a set of tests behind that. If you're interested,
 please check it out: [[https://github.com/200ok-ch/org-parser]]
 
 The strategy we're using with regards to the parser is this:
 
 - Keep improving the existing custom parser for new features and make
-  bugfixes as long as the new one isn't ready.
+  bug fixes as long as the new one isn't ready.
 - In parallel, work on the new one until there is feature parity
   between both parsers.
 - When the new one is finished, integrate it into organice.
@@ -474,7 +474,7 @@ like [[https://httpd.apache.org/docs/2.4/mod/mod_dav.html][Apache]] or [[https:/
 
 **** More information
 
-In the [[https://organice.200ok.ch/documentation.html#faq_webdav][FAQ]], you'll find lots more information regarding WebDAV:
+In the [[file:WIKI.org::#faq_webdav][WebDAV]], you'll find lots more information regarding WebDAV:
 
   - A screencast of how organice works when logging in to a WebDAV
     server
@@ -644,9 +644,10 @@ This is what using a bookmarklet to capture a website looks like in iOS:
   :CUSTOM_ID: siri_integration
   :END:
 
-The organice capture mechanism integrates very nicely with the [[https://support.apple.com/guide/shortcuts/welcome/ios][Siri
-Shortcuts]] feature in iOS, allowing you to use Siri to execute capture
-templates.
+The organice capture mechanism integrates very nicely with the
+[[https://support.apple.com/guide/shortcuts/welcome/ios][Siri
+Shortcuts]] feature in iOS, allowing you to use Siri to execute
+capture templates.
 
 You can use [[https://www.icloud.com/shortcuts/14f91f8cf8f547a183a0734396240984][this sample Shortcut]] to get started with this right away
 in iOS 12 or newer. Open the link on your iOS device and click "Get
@@ -661,39 +662,49 @@ and you're good to go!
 
 ** Beorg
 
-Before starting work on organice, I did use Beorg and donated to it
-multiple times, because I was very happy to have a good option to
-access Org files on my phone with it.
+Before starting work on organice, [[github.com/munen/][@munen]] (the original maintainer)
+used Beorg and donated to it multiple times, because he was very happy
+to have a good option to access Org files on my phone with it.
 
-The important differences to me are:
+The important differences to him were:
 
-- organice is FOSS which is very much in the spirit of Org whilst Beorg
-  is proprietary
-- organice is web based, so there is no lock-in to a specific device or
-  OS
+- organice is FOSS which is very much in the spirit of Org whilst
+  Beorg is proprietary
+- organice is web based, so there is no lock-in to a specific device
+  or OS
 - Beorg currently has better offline support
 
 
 ** org-web
+
 organice has a shared history with [[https://github.com/DanielDe/org-web][org-web]]. In fact, it is a friendly
-fork.
+fork. organice differs from org-web in that:
 
-organice differs from org-web in that:
-
-- It's a community driven project. See our
+- organice is a community driven project. See our
   - [[file:CODE_OF_CONDUCT.md][Code of conduct]]
   - [[file:CONTRIBUTING.org][Contributing guidelines]]
+  - Community chat: #organice on IRC [[https://freenode.net/][Freenode]], or [[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][#organice:matrix.org]]
+    on Matrix
 
-- It has the commitment of a Swiss company behind it to continually
-  work on it.
+- organice has the commitment of a Swiss company behind it to
+  continually work on it.
   - This company is 200ok llc: https://200ok.ch/
+  - The continuous effort yields a certain power over time. At the
+    time of writing this, organice has ~3 times as many commits (1500
+    vs 600) and contributors (25 vs. 8). Of course, quality doesn't
+    trump quantity. However, many of the new contributors brought
+    significant features and improvements, not just tiny patches.
 
-- It has many bug fixes (for example on parsing and exporting org
-  files) compared to its ancestry.
-- It continues to evolve independently with it's own feature set.
-  - For example: organice has WebDAV support.
-- It is a project with equal focus on mobile as desktop browsers.
+- organice initially focused on becoming bug free - for example on
+  parsing and exporting org files correctly.
+- organice continues to evolve independently with it's own feature
+  set. For example, it has [[#faq_webdav][WebDAV]] support.
+- organice is a project with equal focus on mobile as desktop
+  browsers.
 - org-web [[https://github.com/DanielDe/org-web/issues/75][tracks users]] with Google Analytics. organice [[https://github.com/200ok-ch/organice/issues/41][does not]].
+- organice has great documentation:
+  https://organice.200ok.ch/documentation.html
+
 
 *** What's new?
 
@@ -712,7 +723,7 @@ of org-web as [[https://github.com/DanielDe/org-web//issues/72][his pet project]
 [[https://200ok.ch][200ok llc]] behind it whilst building a strong self-sufficient community
 around it.
 
-Thank you for all, DanielDe!
+Thank you for all, DanielDe!🙏
 
 * Attributions
   :PROPERTIES:
