--- a/changelog.org
+++ b/changelog.org
@@ -162,7 +162,7 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
    - All HeaderActionItems are undoable and redoable
 
 ** Fixed
-   - Parsing planning items followed by a a checkbox
+   - Parsing planning items followed by a checkbox
      - Thank you [[https://github.com/schoettl][@schoettl]] for the [[https://github.com/200ok-ch/organice/pull/222/files][PR]] 🙏
 * [2020-01-07 Tue]
 
@@ -566,7 +566,7 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
   - This situation is mitigated with this change. Now the user has the
     option to enable "Sync on application becoming visible" which acts
     similarly to "Live Sync". When the user opts to use this feature,
-    whenever the application get's pulled from the background or
+    whenever the application gets pulled from the background or
     started through the service worker, the first thing that happens
     it that a new version of the org-file is pulled from the server.
     It's therefore much harder for the user to create conflicts.
