--- a/test_helpers/fixtures/checkboxes.org
+++ b/test_helpers/fixtures/checkboxes.org
@@ -1,8 +1,11 @@
 * Header with checkboxes
 - [ ] One
 - [ ] Two
-- [X] Three 
-* Another header 
-- [ ] One
-- [ ] Two
-- [X] Three 
+- [X] Three
+* Another header [2/3]
+- [X] One
+- [-] Two
+  - [ ] Nested one
+    - [ ] Nested nested
+  - [X] Nested two
+- [X] Three
