--- a/test_helpers/fixtures/checkboxes.org
+++ b/test_helpers/fixtures/checkboxes.org
@@ -1,17 +1,17 @@
 * Header with checkboxes
-- [ ] One
-- [ ] Two
-- [X] Three
+- [ ] Box A
+- [ ] Box B
+- [X] Box C
 * Another header [1/3]
-- [X] One
-- [-] Two
-  - [ ] Nested one
-    - [ ] Nested nested
-  - [X] Nested two
-- [-] Three
-  - [ ] Three-nested one
-  - [-] Three-nested two
-    - [ ] Three-nested-nested one
-    - [X] Three-nested-nested two
-  - [ ] three-nested three
+- [X] Box D
+- [-] Box E
+  - [ ] Box G
+    - [ ] Box H
+  - [X] Box I
+- [-] Box J
+  - [ ] Box K
+  - [-] Box L
+    - [ ] Box M
+    - [X] Box N
+  - [ ] Box O
 - Not a checkbox
