--- a/changelog.org
+++ b/changelog.org
@@ -4,6 +4,13 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2020-08-29 Sat]
+** Fixed
+   - If a user folds a header, all its subheaders should collapse as well, so that when the user reopens it, they stay closed.
+     - The previous behavior is buggy in a way that it keeps the subheaders open as they were, restoring their openness when the header is unfolded.
+     - The previous behavior is useful, though. So this change introduces a user setting to toggle the behaviour.
+   - Thank you [[https://github.com/necto][necto]] for your [[https://github.com/200ok-ch/organice/pull/440][PR]] 🙏
+
 * [2020-08-25 Tue]
 ** Fixed
    - Updating table cell values and removing table rows or colums was
