--- a/changelog.org
+++ b/changelog.org
@@ -9,6 +9,8 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
 ** Added
    - Add note to header (=M-x org-add-note=)
      - This adds a button for taking notes to tasks (org-add-note). They will be prepended to the header contents after :PROPERTIES: and before the :LOGBOOK:
+   - Auto-focus filter input fields (search and task-list)
+
 * [2020-08-29 Sat]
 ** Fixed
    - If a user folds a header, all its subheaders should collapse as well, so that when the user reopens it, they stay closed.
