chore: Remove greenkeeper and codeclimate badges
       Rationale:
         - greenkeeper has been superseded by dependabot.
         - codeclimate yields bad maintainability for typical react
         projects (it doesn't like components nor redux). Even react
         and eslint themselves fair super bad. Hence, it's not really
         a help when developing, but just off putting.
           - https://codeclimate.com/github/facebook/react
           - https://codeclimate.com/github/codeclimate/codeclimate-eslint

--- a/README.org
+++ b/README.org
@@ -11,7 +11,7 @@
   :CUSTOM_ID: general
   :END:
 
-Tests: [[https://circleci.com/gh/200ok-ch/organice][https://circleci.com/gh/200ok-ch/organice.svg?style=svg]] Maintainability: [[https://codeclimate.com/github/200ok-ch/organice/maintainability][https://api.codeclimate.com/v1/badges/41d614b1f85c8b261067/maintainability.png]] Dependency management: [[https://greenkeeper.io/][file:https://badges.greenkeeper.io/200ok-ch/organice.svg]]
+Tests: [[https://circleci.com/gh/200ok-ch/organice][https://circleci.com/gh/200ok-ch/organice.svg?style=svg]]
 
 Documentation: https://organice.200ok.ch/documentation.html
 
