fix: UX regression for iOS on Search and TODO List
     Unfortunately, the 'fix' is to disable auto-focus for iOS.
     Rationale:

     On iOS, setting autoFocus in the `Modal` will move the contents
     of the drawer off the screen, because the keyboard pops up late
     when the height is already set to '92%' in the `Drawer`. With
     Redux, we could certainly propagate a height back, but that seems
     hacky and there's other complications:

     - There's no API to check if the keyboard is open or not. When
     - setting the height of the container to something like 48% for
     - iOS, this works on iPhone (tested on Xs and 6S), but when the
     - keyboard is closed, the container is still small when the user
     - wants to read the longer list without the keyboard in the way.

     There might be a better way: If the drawer wouldn't move, iOS
     likely would set the heights correctly automatically.

     I didn't spend more time on this (it's already hours), because
     the _right_ solution would likely be to work on redoing the
     design in a well known fashion like Material Design.

--- a/sample.org
+++ b/sample.org
@@ -166,7 +166,7 @@ Checkboxes:
 
 Currently, plain lists are mostly display only (except that you can check/uncheck checkboxes). If native support for manipulating plain lists is important to you, please let me know by upvoting [[https://github.com/200ok-ch/organice/issues/26][the issue]] on Github
 * Timestamps
-organice has native support for displaying and editing timestamps.
+organice has native support for displaying and editing [[https://orgmode.org/manual/Timestamps.html#Timestamps][timestamps]].
 
 Try tapping on the timestamps below to get a feel for the editor:
 
