--- a/changelog.org
+++ b/changelog.org
@@ -4,6 +4,11 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2020-09-05 Sat]
+
+** Fixed
+  - Search and Todo List modals could be moved off screen on iOS since [2020-08-30 Sun]. The fix is to disable =autoFocus= on is. The rationale for that documented here: https://github.com/200ok-ch/organice/pull/462
+
 * [2020-08-30 Sun]
 
 ** Added
