--- a/CONTRIBUTING.org
+++ b/CONTRIBUTING.org
@@ -52,6 +52,13 @@ These are the steps we take to ensure a high quality in the backlog:
    respond to the question within 5 days, we close the issue. If she
    does choose to respond at some point, she can re-open the issue.
 
+If you just want to start a discussion about a new feature or a
+different kind of change, but do not plan on working on it yourself
+and have no option to bring in someone who will, you are very welcome
+to join the community chat: #organice on IRC [[https://freenode.net/][Freenode]], or
+[[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][#organice:matrix.org]] on Matrix. We are looking forward to seeing you
+there!
+
 ** Contributing to the documentation
 
 The documentation is generated from =README.org= and various other files.
