doc: Add option to hire a maintainer for implementing change requests

--- a/CONTRIBUTING.org
+++ b/CONTRIBUTING.org
@@ -41,7 +41,7 @@ This means that a single person has to be able to groom the backlog
 These are the steps we take to ensure a high quality in the backlog:
 
 1. We only keep issues open on a longer term basis that fulfill one of
-   the following criteria
+   the following criteria:
    - Someone has committed to work on it or plausibly plans to do so
      in the future
    - It is a bug or regression
@@ -53,11 +53,14 @@ These are the steps we take to ensure a high quality in the backlog:
    does choose to respond at some point, she can re-open the issue.
 
 If you just want to start a discussion about a new feature or a
-different kind of change, but do not plan on working on it yourself
-and have no option to bring in someone who will, you are very welcome
-to join the community chat: #organice on IRC [[https://freenode.net/][Freenode]], or
-[[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][#organice:matrix.org]] on Matrix. We are looking forward to seeing you
-there!
+different kind of change, but do not plan on working on it yourself,
+you are very welcome to join the community chat: #organice on IRC
+[[https://freenode.net/][Freenode]], or [[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][#organice:matrix.org]] on Matrix. We are looking forward to
+seeing you there!
+
+Alternatively, if you really want a change implemented, you can hire
+one of the maintainers to do the work. If you want to hire us to
+implement a change request, please send us an email to [[mailto:info@200ok.ch][info@200ok.ch]].
 
 ** Contributing to the documentation
 
