--- a/README.org
+++ b/README.org
@@ -204,7 +204,7 @@ based files on multiple machines in parallel.
 
 Since organice implements Org mode, one might wonder if we plan to
 duplicate the Emacs configuration strategy. In Emacs Org mode, there's
-more than [[https://orgmode.org/manual/Customization.html#Customization][500 variables for customization]] - and on top of that,
+more than [[https://orgmode.org/worg/org-tutorials/org-customize.html][650 variables for customization]] - and on top of that,
 there's often two ways to configure things:
 
 1. Using elisp
@@ -743,14 +743,14 @@ fork. organice differs from org-web in that:
   - Community chat: #organice on IRC [[https://freenode.net/][Freenode]], or [[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][#organice:matrix.org]]
     on Matrix
 
-- organice has the commitment of a Swiss company (200ok llc: https://200ok.ch/) 
+- organice has the commitment of a Swiss company (200ok llc: https://200ok.ch/)
   behind it to continually work on it.
-  - 200ok has a strong track record in fostering Free and Open Source 
-    Software (https://200ok.ch/floss.html) and has co-organized 
+  - 200ok has a strong track record in fostering Free and Open Source
+    Software (https://200ok.ch/floss.html) and has co-organized
     [[https://200ok.ch/tags/emacsconf.html][EmacsConf 2019]].
-  - That's also why organice is Free Software (with the strong 
+  - That's also why organice is Free Software (with the strong
     [[https://github.com/200ok-ch/organice/blob/master/LICENSE][AGPL-3.0]]
-    license) whereas org-web is Open Source (with 
+    license) whereas org-web is Open Source (with
     [[https://github.com/DanielDe/org-web/blob/master/LICENSE][The Unlicense]]).
   - The continuous effort yields a certain power over time. At the
     time of writing this, organice has ~3 times as many commits (~1700
