doc: Update changelog

--- a/changelog.org
+++ b/changelog.org
@@ -4,6 +4,10 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2020-11-15 Sun]
+** Fixed
+   - When repeating a task, an active date timestamp was logged instead of an inactive datetime timestamp.
+
 * [2020-11-14 Sat]
 ** Fixed
    - The task list was not scrollable on Android.
